force-app/main/default/objects/Sales_Profile_Company_Level_Junction__c/Sales_Profile_Company_Level_Junction__c.object-meta.xml
<CustomObject>
    <description>Links the sales profile to the company level it is related to</description>
    <label>Sales Profile Company Level Junction</label>
    <nameField>
        <label>Sales Profile Company Level Junction Nam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Profile Company Level Junctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>