force-app/main/default/objects/Sales_Profile_Company_Level_Junction__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certification</label>
    <referenceTo>Certification__c</referenceTo>
    <relationshipLabel>Sales Profile Company Level Junctions</relationshipLabel>
    <relationshipName>Sales_Profile_Company_Level_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>