force-app/main/default/objects/Sales_Profile_Company_Level_Junction__c/fields/Company_Level__c.field-meta.xml
<CustomField>
    <fullName>Company_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Level</label>
    <referenceTo>Company_Level__c</referenceTo>
    <relationshipLabel>Sales Profile Company Level Junctions</relationshipLabel>
    <relationshipName>Sales_Profile_Company_Level_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>