force-app/main/default/objects/Sales_Profile_Company_Level_Junction__c/fields/company_level_revenue__c.field-meta.xml
<CustomField>
    <fullName>company_level_revenue__c</fullName>
    <formula>Sales_Rep_Profile__r.YTD_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>company_level_revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>