force-app/main/default/objects/Sales_Profile_Company_Level_Junction__c/fields/company_level_Sales_Profile__c.field-meta.xml
<CustomField>
    <fullName>company_level_Sales_Profile__c</fullName>
    <formula>Sales_Rep_Profile__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>company_level_Sales_Profile</label>
    <type>Text</type>
</CustomField>