force-app/main/default/objects/Sales_Profile_Company_Level_Junction__c/fields/Sales_Rep_Profile__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep Profile</label>
    <referenceTo>Sales_Rep_Profile__c</referenceTo>
    <relationshipLabel>Sales Profile Company Level Junctions</relationshipLabel>
    <relationshipName>Sales_Profile_Company_Level_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>